--- a/VTPL/AndroidManifest.xml
+++ b/VTPL/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.philipp_mandler.mes.vtpl"
+    package="com.philipp_mandler.android.vtpl"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+        android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.philipp_mandler.mes.vtpl.MainActivity"
+            android:name="com.philipp_mandler.android.vtpl.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
