--- a/VTPL/AndroidManifest.xml
+++ b/VTPL/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.philipp_mandler.android.vtpl.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
