--- a/VTPL/AndroidManifest.xml
+++ b/VTPL/AndroidManifest.xml
@@ -7,21 +7,30 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.philipp_mandler.android.vtpl.MainActivity"
-            android:label="@string/app_name" android:theme="@style/AppTheme">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.philipp_mandler.android.vtpl.VtplDetailActivity"
+            android:label="@string/title_activity_vtpl_detail" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.philipp_mandler.android.vtpl.MainActivity" />
         </activity>
     </application>
 
